--- a/scss/styles.css
+++ b/scss/styles.css
@@ -141,6 +141,12 @@ body {
   height: 300px;
 }
 
+@media (max-width: 768px) {
+  #map {
+    width: 100%;
+  }
+}
+
 .contact-header {
   font-weight: bold;
 }
