--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -141,6 +141,11 @@ body {
   width: 400px;
   height: 300px;
 }
+@media (max-width: 768px) {
+  #map {
+    width: 100%;
+  }
+}
 
 .contact-header {
   font-weight: bold;
